# K-Vision

./: config.yaml  pyproject.toml
src/demo/: demo.py
src/training/: export.py
src/training/src/: model.py
web/: index.html  web_server.py
